# Coconut_Game_Engine

./: .gitignore  CMakeLists.txt
assets/shader/: normal_fragment.frag  normal_vertex.vert
src/Core/: Game_State.cpp  Game_State.h  Input.cpp  Input.h  Time.cpp  Time.h  Window_Interaction.cpp  Window_Interaction.h  main.cpp
src/Entities/: Game_Object.cpp  Game_Object.h  Player.cpp  Player.h
src/Graphics/: Camera_Projection.cpp  Camera_Projection.h  OpenGL_Loader.cpp  OpenGL_Loader.h  Shader_Loader.cpp  Shader_Loader.h  Sprite_Renderer.cpp  Sprite_Renderer.h  Texture_2D.cpp  Texture_2D.h
src/UI/: UI_Element.cpp  UI_Element.h
src/Utils/: Asset_Loader.cpp  Asset_Loader.h  Resource_Manager.cpp  Resource_Manager.h  Sprite_Render_Math.h  System_Utility.cpp  System_Utility.h
